Correct text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ h4 {
 
 p {
   max-width: 700px;
+  text-align: left;
   margin-left: auto;
   margin-right: auto;
 }
